# crewai-simple-agent

./: README.md  kickoff.sh  main.py  pyproject.toml  status.sh
la_vie/: README.md  pyproject.toml  trigger_sample.json
la_vie/output/: post.md
output/: post.md
src/la_vie/: main.py
src/la_vie/crews/content_crew/: content_crew.py
src/la_vie/crews/content_crew/config/: tasks.yaml
tests/: test_flow_state_restore.py
