[project]
name = "la_vie"
version = "0.1.0"
description = "la-vie using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=1.15.1,<2.0.0",
    "loguru>=0.7.3",
    "pytest>=9.1.1",
]

[project.scripts]
kickoff = "la_vie.main:kickoff"
run_crew = "la_vie.main:kickoff"
plot = "la_vie.main:plot"
run_with_trigger = "la_vie.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
